fix bug : hover on mobile, max-width in title and change of text

--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -105,7 +105,7 @@
 }
 
 .menu + .header {
-    padding-top: 100px;
+    padding-top: 120px;
 }
 
 @media screen and (min-width: 720px) {
